src/main/webapp/styles/styles.css
/* load custom font(s) */
@import url(https://fonts.googleapis.com/css?family=Marcellus+SC);

:focus
{
    outline: none;
}
a
{
    text-decoration: none;
}
body
{
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    font-size: 16px;
    height: 100%;
}
.preload-images
{
    position: absolute;
    margin: -10000px;
}
#wrapper
{
    height: 720px;
    width: 1280px;
    display: flex;
    border-color: #877656;
    border-width: 2px;
    border-style: solid;
    border-radius: 10px;
    background-color: black;
    background-repeat: no-repeat;
    background-position: center;
    transition: 0.5s;
    background-image: url(../images/YouDied-dummy.png),
                       url(../images/background-home.png);
}
#wrapper.nav-about
{
    background-image: url(../images/YouDied-dummy.png),
                       url(../images/background-about.png);
}
#wrapper.nav-faq
{
    background-image: url(../images/YouDied-dummy.png),
                       url(../images/background-faq.png);
}
/*makes the Home page keep the Results page BG image permanently after file has been submitted*/
#wrapper.nav-results,
.has-results #wrapper.nav-home
{
    background-image: url(../images/you-died.png),
                       url(../images/background-results.png);
}
#wrapper.nav-stats
{
    background-image: url(../images/you-died.png),
                       url(../images/background-stats.png);
}
#wrapper.nav-submit
{
    background-image: url(../images/you-died.png),
                       url(../images/background-submit.png);
}
/*white outline on navlink of current page while not being hovered*/
#wrapper.nav-about #navAbout:not(:hover),
#wrapper.nav-faq #navFaq:not(:hover),
#wrapper.nav-home #navHome:not(:hover),
#wrapper.nav-stats #navStats:not(:hover)
{
    border-color: #e4e4e4;
    border-width: 1px 0;
    border-style: solid;
}
/*hiding contents of pages that are not currently in use*/
#wrapper.nav-about #contentFaq,
#wrapper.nav-about #contentHome,
#wrapper.nav-about #contentStats,
#wrapper.nav-about #contentResults,
#wrapper.nav-about #contentSubmit
{
    display: none;
}
#wrapper.nav-faq #contentAbout,
#wrapper.nav-faq #contentHome,
#wrapper.nav-faq #contentStats,
#wrapper.nav-faq #contentResults,
#wrapper.nav-faq #contentSubmit
{
    display: none;
}
#wrapper.nav-home #contentAbout,
#wrapper.nav-home #contentFaq,
#wrapper.nav-home #contentStats,
/*#wrapper.nav-home #contentResults,*/ /*we actually do want this to show up on the home page*/
#wrapper.nav-home #contentSubmit
{
    display: none;
}
#wrapper.nav-results #contentAbout,
#wrapper.nav-results #contentFaq,
/*#wrapper.nav-results #contentHome,*/ /*likewise, this should show up on results*/
#wrapper.nav-results #contentStats,
#wrapper.nav-results #contentSubmit

{
    display: none;
}
#wrapper.nav-stats #contentAbout,
#wrapper.nav-stats #contentFaq,
#wrapper.nav-stats #contentHome,
#wrapper.nav-stats #contentResults,
#wrapper.nav-stats #contentSubmit

{
    display: none;
}
#wrapper.nav-submit #contentAbout,
#wrapper.nav-submit #contentFaq,
#wrapper.nav-submit #contentHome,
#wrapper.nav-submit #contentResults,
#wrapper.nav-submit #contentStats

{
    display: none;
}
.content-left
{
    width: 50%;
    display: flex;
    flex-direction: column;
    color: #e4e4e4;
    font-family: Garamond,serif;
    text-align: center;
}
.navbar
{
    height: 53px;
    font-family: Marcellus SC;
    padding: 28px 60px 0 60px;
    cursor: default;
    margin-bottom: 30px;
}
.navbar-bullet-start
{
    padding: 6px 5px 6px 0;
}
.navbar-bullet
{
    padding: 6px 5px;
}
.navbar-bullet-end
{
    padding: 6px 0 6px 5px;
}
.navlink
{
    display: inline-block;
    background-color: transparent;
    margin: 0 0 18px 0;
    transition: 0.3s;
    padding:6px;
    width: 86px;
    cursor: pointer;
    border-width: 1px 0;
    border-color: transparent;
    border-style: solid;
}
.navlink:hover
{
    background-color: #4f1f05;
    transition: 0.3s;
}
.navbar span
{
    color: #e4e4e4;
}
#contentBody
{
    flex-grow: 1;
    overflow-y: auto;
    margin: 0 40px;
    padding: 0 10px;
}
#contentBody a
{
    color: #877656;
    position: relative;
}
#contentBody a:before
{
    content: "";
    position: absolute;
    width: 100%;
    height: 1px;
    bottom: 0;
    left: 0;
    background-color: #877656;
    visibility: hidden;
    transform: scaleX(0);
    transition: all 0.2s ease-in-out 0s;
}
#contentBody a:hover:before
{
    visibility: visible;
    transform: scaleX(1);
}
/*scrollbar styling from https://css-tricks.com/the-current-state-of-styling-scrollbars/*/
html {
    --scrollbarBG: transparent;
    --thumbBG: #877656;
}
#contentBody::-webkit-scrollbar {
    width: 6px;
}
#contentBody {
    scrollbar-width: thin;
    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
}
#contentBody::-webkit-scrollbar-track {
    background: transparent;
}
#contentBody::-webkit-scrollbar-thumb {
    background-color: var(--thumbBG) ;
    border-radius: 2px;
    border: 3px solid var(--scrollbarBG);
}
.uppercase
{
    font-family: Marcellus SC;
    text-transform: uppercase;
}
.description-top
{
    padding-bottom: 30px;
}
#fileName
{
    font-family: Garamond,serif;
    font-size: 14px;
    color: #e4e4e4;
    border: 1px solid #e4e4e4;
    border-radius: 3px;
    background-color: black;
    text-align: center;
    width: 450px;
    height: 28px;
    margin-bottom: 7px;
}
form
{
    margin-block-end: 0;
}
.file-uploader,
#submit
{
    font-family:Marcellus SC;
    font-size: 16px;
}
/*Inputfile code from https://tympanus.net/codrops/2015/09/15/styling-customizing-file-inputs-smart-way/*/
.inputfile
{
	width: 0.1px;
	height: 0.1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}
.inputfile+label
{
line-height: 29px;
}
.inputfile+label,
.inputfile~#submit
{
    color: #e4e4e4;
    background-color: black;
    border-color: #e4e4e4;
    border-width: 1px;
    border-style: solid;
    display: inline-block;
    cursor: pointer;
    width: 120px;
    height: 30px;
    margin: 7px;
    box-sizing: border-box;
}
.inputfile:focus+label,
#submit,
.inputfile+label:hover,
#submit:hover
{
    background-color: #4f1f05;
    border-color: #4f1f05;
    border-width: 1px;
    border-style: solid;
    transition: 0.3s;
}
.inputfile:focus + label,
.inputfile:focus~#submit
{
    outline: 1px dotted #000;
    outline: -webkit-focus-ring-color auto 5px;
}
.spinner
{
    height: 64px;
    margin-top: 7px;
    margin-bottom: 8px;
    display: none;
}
.description-bottom
{
    padding: 19px 0 0 0;
}
#contentResults hr
{
    margin: 20px auto 10px;
}
body:not(.has-results) #contentResults
{
    display: none;
}
#resultsTable hr
{
    margin: 10px auto;
    width: 100%;
}
#resultsTable
{
    margin: 0 auto;
    border-spacing: 20px 5px;
    font-size: 16px;
}
#resultsTable .button-general
{
    font-size: 16px;
    width:100%;
}
.char-data-header
{
    width: 130px;
    height: 30px;
    margin: 0 10px;
    text-align: center;
    color: #e4e4e4;
}
.char-data-info
{
    width: 130px;
    margin: 0 10px;
    font-family: Garamond,serif;
    color: #e4e4e4;
    text-align: center;
}
.char-data-button
{
    font-family: Garamond,serif;
    width: 130px;
    font-size: 16px;
}
.selected-char
{
    display: inline-flex;
}
.selected-char-info
{
    width: 130px;
    margin: 0 10px;
    font-family: Garamond,serif;
    color: #e4e4e4;
    text-align: center;
}
hr
{
    width: 190px;
    color: #e4e4e4;
    margin: 20px auto;
}
select
{
    display: block;
    background-color:black;
    color: #e4e4e4;
    margin: 10px auto;
    border-radius: 3px;
    border-color: #e4e4e4;
    font-family: Garamond,serif;
    font-size: 16px;
}
/*Hiding checkbox buttons on Submit page and styling text so that it works as a button*/
#ContentSubmit [type="checkbox"]
{
    display:none;
}
.checkbox-buttons
{
    margin: 10px auto;
    border-radius: 3px;
    border-color: #e4e4e4;
    border-style: solid;
    border-width: 1px;
    padding: 4px;
    display: block;
    width: 250px;
    cursor: pointer;
    transition: 0.2s;
}
.checkbox-buttons:not(:checked)
{
    background-color: black;
    transition: 0.2s;
}
.checkbox-buttons:hover
{
    box-shadow: 0 0 0px 1.5px white inset;
    transition: 0.2s;
}
#ContentSubmit [type="checkbox"]:checked+.checkbox-buttons:hover
{
    box-shadow: 0 0 0px 1.5px #ff8763 inset;
    transition: 0.2s;
    border-color: #ff8763;
}
#ContentSubmit [type="checkbox"]:checked+.checkbox-buttons
{
    background-color: #4f1f05;
    transition: 0.2s;
    border-color: #ff8763;
}
.button-general
{
    background-color: black;
    color: #e4e4e4;
    border-color: #e4e4e4;
    border-style: solid;
    border-radius: 3px;
    padding: 5px 10px;
    border-width: 1px;
    font-size: 14px;
    cursor: pointer;
}
.button-general:hover
{
    background-color: #4f1f05;
    border-color: #4f1f05;
    border-width: 1px;
    border-style: solid;
    transition: 0.3s;
}
.button-general:not(:hover)
{
    transition: 0.3s;
}
.copyright-notice
{
    height: 53px;
    font-size: 13px;
    padding: 0 60px 30px;
    margin-top: 30px;
}
.divider-line
{
    border-color: #877656;
    border-width: 2px;
    border-style: solid none;
    height: 2px;
}
.disclaimer
{
    padding-top: 20px;
    color: #877656;
}

